fix word-wrapping overflow in hero button

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -51,6 +51,7 @@ th {
     color: black;
     border: none;
     border-radius: unset;
+    display: block;
 }
 
 .hero .md-button:hover {
